<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />
    <item
        android:id="@+id/journalListFragment"
        android:icon="@drawable/ic_journal"
        android:title="@string/title_journal" />
    <item
        android:id="@+id/aiChatFragment"
        android:icon="@drawable/ic_ai"
        android:title="@string/title_ai" />
    <item
        android:id="@+id/statisticsFragment"
        android:icon="@drawable/ic_statistics"
        android:title="@string/title_statistics" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_profile" />
</menu>
